style.css
/* Entire body styling. */
body {
    background-color: #e9e9e9;
    font-family: Avenir, Geneva, Arial, sans-serif;
    font-size: calc(22px + 12 * ((100vw - 300px) / 1300));
}

* {
    margin: 0;
    padding: 0;
}

/* The positioning and padding of the WorkIn logo. */
.logo-image {
    float: left;
    position: relative;
    padding: 13px 20px 0px 20px;
}

/* Made buttons to control padding and vertical centering. */
.button {
    float: right;
    color: black;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    cursor: pointer;
    padding: 26px 44px 0px 10px; 
    font-size: 20px;
}

/* Don't display the three-horizontal-barred icon. Only display it when
   width is less than 1020. */
.topnav .icon {
    display: none;
}

@media screen and (max-width: 1020px) {
    .topnav a:not(#first-child):not(#toggle-button) {display: none;}

    .topnav a.icon {
        float: right;
        display: block;
        padding: 24px 30px 10px 30px;
    }

    .topnav.responsive {position: relative;}

    .topnav.responsive a.icon {
        position: absolute;
        right: 0;
        top: 0;
    }

    .topnav.responsive a {
        float: none;
        display: block;
        text-align: left;
    }

    .sticky + .content {
        padding-top: 77px;
    }
}    


/* Styling of the links. */
a:link {
    color: #000000;
    text-decoration: none;
}

a:visited {
    color: #000000;
    text-decoration: none;
}

a:hover {
    color: #47b075;
    text-decoration: underline;
    -webkit-transition-duration: 0.2s; /* Safari */
    transition-duration: 0.2s;
}

a:active {
    color: #FFFFFF;
    text-decoration: underline;
}

/* Styling of the sticky header once screen is scrolled down. */
.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: rgba(255,255,255,0.8);
}

/* The different sections of the website are table-row classes. */
.table-row {
    background-color: none;
    width: 80%;
    padding: 80px 10% 28% 10%;
    clear: both;
}

.black-background {
    background-color: #191919;
}

.gray-background {
    background-color: #e9e9e9;
}

.green-background {
    background-color: #47b075;
}

.slideshow {
    display: none;
}

img {
    vertical-align: middle;
}

.slideshow-container {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0; 
    top: 0;
}

/* For mobile screens. */
.introduction-text {
    top: 20vh;
    width: 80%;
    left: 10vw;
    text-align: center;
    position: absolute;
    font-size: calc(25px + 12 * ((100vw - 300px) / 1300));
    color: black;
    padding: 20px 0px;
    background-color: rgba(255,255,255,0.4);
}

/* For desktop screens. */
@media screen and (min-width:680px) {
    .introduction-text {
        font-size: calc(22px + 12 * ((100vw - 300px) / 1300));
        top: 40vh;
    }
} 

.introduction-text {
    border-radius: 5px;
}
/* All h2's have this styling. */
h2 {
    color: #47b075;
    font-size: 100%;
    padding: 20px 0px 0px 0px;
    text-align: center;
}

/* This is to style the horizontal bar below each section title. */
.lowbar {
    font-size: 80%;
    color: #47b075;
    padding: 20px 0px 15px 0px;
}

p, ul {
    color: #a5a5a5; /* This number is pure coincidence ;D */
    text-align: center;
    font-size: 73%;
}


/* Mobile friendly responsive Facilities and Perks section. */
/* (For phones and tablets) */
@media screen and (max-width:910px) {
    /* Reduces the amount of padding in the bottom for better view 
       in mobile devices. Also used in the Contact Us section. */
    .table-row-perks {
        background-color: none;
        width: 80%;
        padding: 80px 10% 15px 10%;
        clear: both;
    }

    .perk-box {
        font-size: calc(14px + 12 * ((100vw - 300px) / 1300));
        text-align: center;
        height: 150px;
        width: 200px;
        padding: 55px 10px 0px 10px;
    }

    .pb1, .pb3, .pb5, .pb7 {
        background-color: #e9e9e9;
        margin: auto;
    }

    .pb1:hover, .pb3:hover, .pb5:hover, .pb7:hover {
        background-color: #d2d2d2;
    }

    .pb2, .pb4, .pb6, .pb8 {
        background-color: #47b075;
        margin: auto;
    }

    .pb2:hover, .pb4:hover, .pb6:hover, .pb8:hover {
        background-color: #68c290;
    }

    .perk-text {
        padding: 10px;
    }
}

/* Desktop/laptop Facilities and Perks section. */
@media screen and (min-width:911px) {
    .perk-box {
        width: 19.5%;
        height: 130px;
        padding: 50px 20px 10px 20px;
        float: left;
        text-align: center;    
        font-size: calc(14px + 12 * ((100vw - 300px) / 1300));
    }

    .pb1:hover, .pb3:hover, .pb6:hover, .pb8:hover {
        background-color: #d2d2d2;
    }

    .pb2, .pb4, .pb5, .pb7 {
        background-color: #47b075;
    }

    .pb2:hover, .pb4:hover, .pb5:hover, .pb7:hover {
        background-color: #68c290;
    }
}

.extra-bottom-border-perks {
    border: 150px solid #e9e9e9;
    border-top-style: none;
    border-left-style: none;
    border-right-style: none;
}

/* Mobile friendly, responsive version of Prices section. */
/* (For phones/tablets) */
@media screen and (max-width:949px) {
    .table-row-prices {
        padding: 80px 5% 50px 5%; 
    }
    .pricing-box {
        width: 90%;
        margin: auto;
        clear: both;
        padding: 20px;
    }

    #price-description {
        padding: 20px;
    }

    .pricing-box-1 {
        border: #e9e9e9 1px solid;
    }

    .pricing-box-2 {
        border: #e9e9e9 1px solid;
        border-top-style: none;
    }

    .pricing-more-padding {
        padding: 40px 0px;
    }
}


/* For desktop/laptop version of Prices section. */
@media screen and (min-width:950px) {
    .table-row-prices {
        background-color: none;
        width: 80%;
        padding: 80px 10% 25px 10%;
        clear: both;
    }

    .pricing-box {
        width: 40%;
        float: left;
        padding: 3% 5% 4% 4%;
        border: #e9e9e9 1px solid;
        border-bottom-style: none;
        border-top-style: none;
    }

    .pricing-box-2 {
        border-left-style: none;
    }

    #price-description {
        padding: 30px;
    }

    .pricing-more-padding {
        padding: 180px 0px 0px 0px;
    }

    #ref {
        clear: both;
        padding: 0px;
        margin: 0px;
        color: #191919;
    }
}

#price-description {
    color: #47b075;
}

#option-pricing-title {
    color: white;
    font-size: calc(40px + 12 * ((100vw - 300px) / 1300));
}

#starting-price {
    padding: 5px 0px 20px 0px;
    font-size: 50px;
    color: #ffff81;
    text-align: center;
}

.pricing-box {
    text-align: center;
    background-color: #191919;
}

.pricing-box-1:hover, .pricing-box-2:hover {
    background-color: #262626;        
}

ul {
    color: #47b075;
    list-style: none;
    text-align: left;
    padding-left: 60px;
}

ul li:before {
    content: '✓';
}

.pricing-more-padding {
    color: #191919;
}

/* Making photos bigger for mobile devices .*/
@media screen and (max-width:910px) {
    #extra-photos {
        float:left;
        width:50%;
        height:auto;
    }
}

/* Having 3 photos per line in bigger screens. */ 
@media screen and (min-width:911px) {
    #extra-photos {
        float:left;
        width:33.33%;
        height:auto; 
    }
}

#photos {
    padding: 0%;
    clear: both;
}

.photos-section {
    margin: 0;
    padding: 0;
}

/* Making map responsive and mobile friendly. */
@media screen and (max-width:955px) {
    .mapbox {
        height: 350px;
        margin: auto;
    }

    .contact-info-box {
        width: 50%;
        margin: auto;
        font-size: calc(14px + 12 * ((100vw - 300px) / 1300));
        text-align: center;
        padding: 30px 0px;
    }
}

/* For desktop/laptop version of website. */
@media screen and (min-width:955px) {
    .contact-info-box {
        width: 40%;
        float: left;
        font-size: 80%;
        margin: 0;
        padding: 40px 30px 100px 60px;
    }

    .mapbox {
        width: 40%;
        height: 250px;
        float: left;
        margin: 0;
        padding: 30px 30px;
    }
}

.footer {
    color: black;
    clear: both;
    padding: 10px 20px;
  /*border: 40px solid #e9e9e9;
    border-left-style: none;
    border-bottom-style: none;
    border-right-style: none;*/
    text-align: center;
    font-size: 80%;
}

.footer-text {
    color: black;
}

